# pico-dram-tester

./: .gitignore  .gitmodules  .~lock.pico-dram-tester.csv#  README.md
firmware/: CMakeLists.txt  README.md  mem_chip.c  mem_chip.h  pio_patcher.c  pmemtest.c  pmemtest.uf2  ram1b1r.pio  ram4164.c  ram4164.h  ram4164.pio  ram4816.c  ram4816.h  ram4816.pio
firmware/test/: test_runner.c
firmware/tests/: CmakeLists.txt  test_pmemtest.c
firmware/timings/: 4116-120.xlsx  4116-150.xlsx  4164-100.xlsx  4164-120.xlsx  4164-150.xlsx  4816-100.xlsx  4816-120.xlsx  4816-150.xlsx  Pico Dram Tester Timings.xlsx
